--- a/artwebsandroid/res/layout/main.xml
+++ b/artwebsandroid/res/layout/main.xml
@@ -4,9 +4,25 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <TextView
+    <Button 
+        android:id="@+id/listButton"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/hello" />
+        android:layout_height="wrap_content"  
+        android:text="列表"
+        />
+    
+    <Button 
+        android:id="@+id/installApkButton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"  
+        android:text="安装更新包"
+        />
+    
+    <Button 
+        android:id="@+id/uiButton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"  
+        android:text="测试2"
+        />
 
 </LinearLayout>
