--- a/AndroidDemo/res/layout/camera.xml
+++ b/AndroidDemo/res/layout/camera.xml
@@ -4,9 +4,33 @@
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
+   <TextView
+       	android:id="@+id/megTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/hello_world" />
+    
     <cn.artwebs.control.ArtCamera
         android:id="@+id/artcamera"
-        android:layout_width="320dip"
+        android:layout_width="fill_parent"
         android:layout_height="200dip" />
-
+    <Button 
+        android:id="@+id/saveImageBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="拍照"
+        />
+    <Button 
+        android:id="@+id/saveVideoBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="摄像"
+        />
+    <Button 
+        android:id="@+id/saveAudioBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="录音"
+        />
+    
 </LinearLayout>
