--- a/artwebsandroid/res/layout/artcamera.xml
+++ b/artwebsandroid/res/layout/artcamera.xml
@@ -6,8 +6,14 @@
 	<SurfaceView
         android:id="@+id/video_view"
         android:layout_width="fill_parent"
+        android:visibility="gone"
         android:layout_height="fill_parent" />
-
+	<ImageView 
+	    android:id="@+id/image_view"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:visibility="gone"
+        android:src="@drawable/mic"/>
     <TextView
         android:id="@+id/video_timer"
         android:layout_width="wrap_content"
