--- a/artwebsandroid/res/layout/artbuttonimage.xml
+++ b/artwebsandroid/res/layout/artbuttonimage.xml
@@ -14,6 +14,7 @@
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
             android:text="New Text"
             android:id="@+id/titleText"/>
 </LinearLayout>
