--- a/artwebsandroid/res/layout/arttabpager.xml
+++ b/artwebsandroid/res/layout/arttabpager.xml
@@ -8,12 +8,12 @@
             android:layout_width="fill_parent"
             android:layout_height="50dp"
             android:background="@color/white"
-            android:layout_above="@+id/tabPager"
-            />
+            android:layout_alignParentTop="true" android:layout_alignParentLeft="true"/>
     <android.support.v4.view.ViewPager
             android:id="@+id/tabPager"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true" >
+            android:layout_below="@+id/tabGridView" android:layout_alignParentLeft="true"
+            android:layout_alignParentBottom="true">
     </android.support.v4.view.ViewPager>
 </RelativeLayout>
