--- a/artwebsandroid/res/layout/arttabpager.xml
+++ b/artwebsandroid/res/layout/arttabpager.xml
@@ -8,7 +8,9 @@
             android:layout_width="fill_parent"
             android:layout_height="50dp"
             android:background="@color/white"
-            android:layout_alignParentTop="true" android:layout_alignParentLeft="true"/>
+            android:layout_marginBottom="1dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"/>
     <android.support.v4.view.ViewPager
             android:id="@+id/tabPager"
             android:layout_width="fill_parent"
