完成部分属性控件开发

--- a/artwebsandroid/res/layout/artsettingitem.xml
+++ b/artwebsandroid/res/layout/artsettingitem.xml
@@ -2,26 +2,43 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="80dp">
+                android:layout_height="wrap_content" android:background="@color/white">
 
     <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:id="@+id/imageView"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/icoImageView"
+            android:layout_margin="10dp"
             android:src="@drawable/menu_default_icon" android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
             android:text="New Text"
-            android:id="@+id/textView"
-            android:layout_centerVertical="true" android:layout_toRightOf="@+id/imageView"/>
+            android:id="@+id/titleTextView"
+            android:textColor="@color/black"
+            android:textSize="16dp"
+            android:layout_centerVertical="true" android:layout_toRightOf="@+id/icoImageView"/>
     <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginRight="20dp"
-            android:id="@+id/imageView2"
+            android:layout_marginRight="10dp"
+            android:id="@+id/arrowsImageView"
             android:layout_centerVertical="true" android:layout_alignParentRight="true"
             android:src="@drawable/menu_default_icon"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/valueTextView"
+            android:layout_marginRight="10dp"
+            android:layout_centerVertical="true" android:layout_toLeftOf="@+id/arrowsImageView"/>
+    <ImageView
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:id="@+id/lineImageView"
+            android:layout_marginLeft="40dp"
+            android:background="#ffbebebe"
+            android:layout_below="@id/icoImageView"
+            android:layout_alignParentRight="true"/>
 </RelativeLayout>
