增加圆角按钮

--- a/artwebsandroid/res/values/attrs.xml
+++ b/artwebsandroid/res/values/attrs.xml
@@ -12,8 +12,9 @@
         </attr>
     </declare-styleable>
 
-    <declare-styleable name="ArtRoundImageView">
+    <declare-styleable name="ArtRoundView">
         <attr name="roundWidth" format="dimension" />
         <attr name="roundHeight" format="dimension" />
     </declare-styleable>
+
 </resources>
